k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1/
spec:
  rules:
  - host: arch.homework 
    http:
      paths:
      - path: /otusapp/[^/]+/([^/]+)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: otus-app-service
            port:
              number: 8000
      - path: /(health)
        pathType: Prefix
        backend:
          service:
            name: otus-app-service
            port:
              number: 8000
